--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <meta name="israel" content="portfolio Website" />
         <title>mavdev</title>
         <!-- Favicon-->
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4598151664788185"
+     crossorigin="anonymous"></script>
        <link rel="icon" type="image/x-icon" href="assets/img/icion.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
