--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="israel" content="portfolio Website" />
+        <meta name="google-adsense-account" content="ca-pub-4598151664788185">
         <title>mavdev</title>
         <!-- Favicon-->
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4598151664788185"
